# utxord-wallet

./: .env  .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-compose.yml  push-with-tag.sh
.github/workflows/: build-publish-release.yml  debug-tags-in-actions.yml
browser-exstension/: package.json  vite.config.ts
browser-exstension/scripts/: manifest-prod.ts  mvsw-dev.ts  utils.ts
browser-exstension/src/background/: api.ts  index.ts  rest.ts  winManager.ts
browser-exstension/src/background/tests/: api.test.ts
browser-exstension/src/components/: CustomInput.vue  Dropdown.vue  Footer.vue  GenerateScreen.vue  Header.vue  LoadScreen.vue  PasswordScreen.vue  PriceComp.vue  SignSellScreen.vue
browser-exstension/src/config/: index_e2e.ts  index_qa.ts  index_utxord.ts
browser-exstension/src/content/: theme.ts
browser-exstension/src/libs/: bip39.browser.js  crypto-js.js  safe-buffer.js  utxord.js
browser-exstension/src/popup/: main.ts
browser-extension/: .gitignore  package-lock.json  package.json  svg-to-vue.js  vite.config.ts
browser-extension/extension/: README.txt
browser-extension/scripts/: mvsw-prod.ts  prepare-dev.ts  utils.ts
browser-extension/src/: manifest.ts
browser-extension/src/background/: api.ts  errors.ts  hashedStore.ts  index.ts  rest.ts  scheduler.ts  winManager.ts
browser-extension/src/background/tests/: api.test.ts  api_test.ts
browser-extension/src/components/: AlertMnemonic.vue  Button.vue  CreatePasswordScreen.vue  CustomInput.vue  Dropdown.vue  EstimateWrapper.vue  ExportKeysScreen.vue  Footer.vue  GenerateScreen.vue  GetRawTransactions.vue  Header.vue  HomeScreen.vue  LoadScreen.vue  LoadingScreen.vue  Logo.vue  ManageAddressScreen.vue  ManagePasswordScreen.vue  ManageScreen.vue  Modal.vue  NotifyError.vue  NotifyInBody.vue  NotifySuccess.vue  PasswordScreen.vue  PriceComp.vue  SignBuyScreen.vue  SignCommitScreen.vue  SignCreateScreen.vue  SignSellScreen.vue  SignTransferScreen.vue  SignWrapper.vue  SignWrapperForSend.vue  StartScreen.vue  TextComp.vue  ThemeBtn.vue  WalletCreated.vue
browser-extension/src/components/Icons/: AlertIcon.vue  ArrowLeftIcon.vue  CheckIcon.vue  ChevronIcon.vue  CopyIcon.vue  EyeIcon.vue  LoaderIcon.vue  LogoIcon.vue  MoonIcon.vue  QuestionIcon.vue  RefreshIcon.vue  RefreshIconSeed.vue  SunIcon.vue
browser-extension/src/components/UI/: AlertBox.vue  Checkbox.vue  Dropdown.vue  RadioBox.vue
browser-extension/src/config/: bip39.ts  events.ts  index.ts  index_e2e.ts  index_qa.ts  index_utxord.ts  messages.ts  storageKeys.ts
browser-extension/src/config/bip39_wordlists/: chinese-simplified.js  chinese-traditional.js  czech.js  english.js  french.js  italian.js  japanese.js  korean.js  portuguese.js  spanish.js
browser-extension/src/content/: index.ts
browser-extension/src/helpers/: index.ts  messenger.ts  winHelpers.ts
browser-extension/src/libs/: utxord.wasm  windowStorage.ts  wwa.ts
browser-extension/src/options/: Options.vue  main.ts
browser-extension/src/pages/: AddressesPage.vue  AlertMnemonicPage.vue  ConfirmSendPage.vue  CreatePasswordPage.vue  EstimateFeePage.vue  ExportKeysPage.vue  GeneratePage.vue  HomePage.vue  LoadPage.vue  LoadingPage.vue  ManageAddressPage.vue  ManageErrors.vue  ManagePage.vue  ManagePasswordPage.vue  ManageViewMode.vue  SendPage.vue  SignBuyPage.vue  SignBuyProductPage.vue  SignCommitPage.vue  SignCreatePage.vue  SignSellPage.vue  SignSimplePage.vue  StartPage.vue  UserAddressPage.vue  UtxosPage.vue  WalletCreatedPage.vue  checkUserMnemonic.vue
browser-extension/src/popup/: Popup.vue  index.html  main.ts  router.ts  settingsRouter.ts
browser-extension/src/popup/directives/: VClickOutside.ts
browser-extension/src/popup/modules/: useTheme.ts  useWallet.ts
browser-extension/src/popup/store/: index.ts
browser-extension/src/styles/: main.css
core/: .gitignore  Dockerfile.build_python_plugin  Makefile.am  autogen.sh  build_plugin.sh  configure.ac  version.sh
core/build-aux/m4/: ax_cxx_compile_stdcxx.m4  ax_python_devel.m4  ax_subdirs_configure.m4  tbb.m4
core/contrib/nlohmann_json/: LICENSE
core/contrib/nlohmann_json/nlohmann/: json.hpp
core/src/: Makefile.am
core/src/contract/: Makefile.am  address.cpp  address.hpp  bip322.cpp  bip322.hpp  chainmode_spec.cpp  chainmode_spec.hpp  contract_builder.cpp  contract_builder.hpp  contract_builder_factory.hpp  contract_error.hpp  create_inscription.cpp  create_inscription.hpp  ecdsa.cpp  ecdsa.hpp  inscription.cpp  inscription.hpp  inscription_common.hpp  keypair.cpp  keypair.hpp  runes.cpp  runes.hpp  simple_transaction.cpp  simple_transaction.hpp  swap_inscription.cpp  swap_inscription.hpp  trustless_swap_inscription.cpp  trustless_swap_inscription.hpp
core/src/python_binding/: Makefile.am  __init__.py  tx_utils.cpp  tx_utils.hpp  utxord-pybind.i
core/src/wasm_binding/: Makefile.am  contract.idl  l15.cpp  utxord.cpp  utxord.idl
core/test/: Makefile.am  test_case_wrapper.hpp
core/test/contract/: Makefile.am  regression.json  test_bip322.cpp  test_contract_builder.cpp  test_create_inscription.cpp  test_inscription.cpp  test_regression.cpp  test_runes.cpp  test_signing.cpp  test_simple_tx.cpp  test_swap_inscription.cpp  test_trustless_swap_inscription.cpp
core/test/python_binding/: bip322_test.py  contract_builder_test.py  exception_test.py  exceptions_test.py  inscription_test.py  keyregistry_test.py  utils_test.py
core/test/testlib/: Makefile.am  test_case_wrapper.cpp  test_case_wrapper.hpp
core/test/wasm_binding/: smoke_test.html  test.js
toolchain-image/: Dockerfile  README.md
